--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -81,14 +81,14 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="cpf">CPF</label>
-            <input value="00007311966" name="cpf" type="text" class="form-control" id="cpf" placeholder="" value="" required="">
+            <input  name="cpf" type="text" class="form-control" id="cpf" placeholder="" value="" required="">
             <div class="invalid-feedback label-error feedback-cpf">
               Cpf requerido.
             </div>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="nomecompleto">Nome Completo</label>
-            <input value="Rodrigo Cruz" name="nomeCompleto" type="text" class="form-control" id="nomecompleto" placeholder="" value="" required="">
+            <label for="nomeCompleto">Nome Completo</label>
+            <input  name="nomeCompleto" type="text" class="form-control" id="nomeCompleto" placeholder="" value="" required="">
             <div class="invalid-feedback label-error">
               Nome Completo Requerido.
             </div>
@@ -101,7 +101,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">@</span>
             </div>
-            <input value="rodrigo.cruz76@gmail.com" name="email" type="email" class="form-control" id="email" placeholder="email" required="">
+            <input  name="email" type="email" class="form-control" id="email" placeholder="email" required="">
             <div class="invalid-feedback label-error" style="width: 100%;">
               E-mail requirido.
             </div>
@@ -112,19 +112,19 @@
 
         <div class="row" id="acomp1">          
           <div class="col-md-6 mb-3">
-            <label for="nomecompleto">Nome Acompanhante 1</label>
-            <input value="nome acompanhante1" name="acompanhante1" type="text" class="form-control" id="acompanhante1" placeholder="" value="" required="">
+            <label for="acompanhante1">Nome Acompanhante 1</label>
+            <input  name="acompanhante1" type="text" class="form-control" id="acompanhante1" placeholder="" value="" required="">
             <div class="invalid-feedback label-error">
               Nomes acompanhante 1 Requerido.
             </div>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="email">E-mail acompanhante 1</label>
+            <label for="email1">E-mail acompanhante 1</label>
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text">@</span>
               </div>
-              <input value="emailacomanhante1@gmail.com" name="email1" type="email" class="form-control" id="email1" placeholder="email acompanhante 1" required="">
+              <input  name="email1" type="email" class="form-control" id="email1" placeholder="email acompanhante 1" required="">
               <div class="invalid-feedback label-error" style="width: 100%;">
                 E-mail acompanhante 1 requirido.
               </div>
@@ -135,14 +135,14 @@
 
         <div class="row" id="acomp2">          
           <div class="col-md-6 mb-3">
-            <label for="nomecompleto">Nome Acompanhante 2</label>
+            <label for="acompanhante2">Nome Acompanhante 2</label>
             <input type="text" class="form-control" name="acompanhante2" id="acompanhante2" placeholder="" value="" required="">
             <div class="invalid-feedback label-error">
               Nomes acompanhante 2 Requerido.
             </div>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="email">E-mail acompanhante 2</label>
+            <label for="email2">E-mail acompanhante 2</label>
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text">@</span>
@@ -158,14 +158,14 @@
 
         <div class="row" id="acomp3">          
           <div class="col-md-6 mb-3">
-            <label for="nomecompleto">Nome Acompanhante 3</label>
+            <label for="acompanhante3">Nome Acompanhante 3</label>
             <input type="text" class="form-control" name="acompanhante3" id="acompanhante3" placeholder="" value="" required="">
             <div class="invalid-feedback label-error">
               Nomes acompanhante 3 Requerido.
             </div>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="email">E-mail acompanhante 3</label>
+            <label for="email3">E-mail acompanhante 3</label>
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text">@</span>
@@ -181,14 +181,14 @@
 
         <div class="row" id="acomp4">          
           <div class="col-md-6 mb-3">
-            <label for="nomecompleto">Nome Acompanhante 4</label>
+            <label for="acompanhante4">Nome Acompanhante 4</label>
             <input type="text" class="form-control" name="acompanhante4" id="acompanhante4" placeholder="" value="" required="">
             <div class="invalid-feedback label-error">
               Nomes acompanhante 4 Requerido.
             </div>
           </div>
           <div class="col-md-6 mb-3">
-            <label for="email">E-mail acompanhante 4</label>
+            <label for="email4">E-mail acompanhante 4</label>
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text">@</span>
@@ -204,7 +204,7 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="datanascimento">Data de Nascimento <span class="text-warning">(Opcional)</span></label>
-            <input value="12/03/1976" type="text" name="datanascimento" class="form-control" id="datanascimento" placeholder="" value="">
+            <input  type="text" name="datanascimento" class="form-control" id="datanascimento" placeholder="" value="">
             
           </div>
           <div class="col-md-6 mb-3">
@@ -224,7 +224,7 @@
 
         <div class="mb-3">
           <label for="address">Enderço</label>
-          <input value="sqn 405 bloco h apt 307" name="endereco" type="text" class="form-control" id="endereco" placeholder="Rua" required="">
+          <input  name="endereco" type="text" class="form-control" id="endereco" placeholder="Rua" required="">
           <div class="invalid-feedback label-error">
             Please enter your shipping address.
           </div>
@@ -232,19 +232,19 @@
 
         <div class="mb-3">
           <label for="bairro">Bairro<span class="text-warning">(Optional)</span></label>
-          <input value="asa norte" type="text" name="bairro" class="form-control" id="bairro" placeholder="Bairro">
+          <input  type="text" name="bairro" class="form-control" id="bairro" placeholder="Bairro">
         </div>
         <div class="row">
           <div class="col-md-6">
             <label for="cep">CEP</label>
-            <input value="70846080" type="text" name="cep" class="form-control" id="cep" placeholder="" required="">
+            <input type="text" name="cep" class="form-control" id="cep" placeholder="" required="">
             <div class="invalid-feedback label-error">
               CEP requerido.
             </div>
           </div>
           <div class="col-md-6">
             <label for="pais">País</label>
-            <input value="Brasil" type="text" name="pais" class="form-control" id="pais" placeholder="" required="">
+            <input  type="text" name="pais" class="form-control" id="pais" placeholder="" required="">
             <div class="invalid-feedback label-error">
               País requerido.
             </div>
@@ -277,10 +277,16 @@
         </div>
         <hr class="mb-4">
         <div class="custom-control custom-checkbox">
-          <input value="1" type="checkbox" class="custom-control-input" id="mailmarketing" name="mailmarketing">
+          <input value="1" checked="checked" type="checkbox" class="custom-control-input" id="mailmarketing" name="mailmarketing">
           <label class="custom-control-label" for="mailmarketing">Receber emails da Obra de Maria DF</label>
         </div>
-    
+        <div class="custom-control custom-checkbox">
+          <input value="1" type="checkbox" class="custom-control-input" id="termos" name="termos" required>
+          <label class="custom-control-label" for="termos">Li o contrato e aceito os termos</label>
+          <div class="invalid-feedback label-error">
+            Por favor aceite os termos.
+          </div>
+        </div>
       </div>
 
     </div>
@@ -398,6 +404,30 @@ function blockAcomp(numero,disabled){
         }
         );
       }
+
+
+      function preencheForm(cliente){
+        console.log(cliente.nomeCompleto);
+        $("#nomeCompleto").val(cliente.nomeCompleto);
+        $("#email").val(cliente.email);
+        $("#datanascimento").val(cliente.dataNascimento);
+        if(cliente.sexo == 'M'){
+          $("#masculino").prop("checked",true);
+        }else{
+          $("#feminino").prop("checked",true);
+        }
+        $("#endereco").val(cliente.endereco);
+        $("#bairro").val(cliente.bairro);
+        $("#cep").val(cliente.cep);
+        $("#pais").val(cliente.paisEndereco);
+        $("#uf").val(cliente.estadoEndereco);
+        if(cliente.enviaCorrespondencia == 1){
+          $("#mailmarketing").prop("checked",true); 
+        }else{
+          $("#mailmarketing").prop("checked",false);
+        }
+        $('#cidade').load('ajax/comboCidadesPorUf.php?selected='+cliente.cidadeEndereco+'&idUf='+$('#uf').val());
+      }
       function checkCpf() {
         
         input = document.getElementById("cpf");
@@ -487,7 +517,22 @@ function blockAcomp(numero,disabled){
         $('#uf').change(function(){
     	    $('#cidade').load('ajax/comboCidadesPorUf.php?idUf='+$('#uf').val()); 
         });
+        $("#cpf").change(function(){
 
+          var funcSuccess = function(data) {
+            console.log(data.code);
+              if(data.code == 200){
+                preencheForm(data.data);
+              }
+            }
+            //funcao de erro
+            var funcDefaultError = function(erro) {
+            console.log(erro.status + '-' + erro.responseText);
+            }
+            postJson('ajax/shopping/clienteByCpf.php',{"cpf":$("#cpf").val()},funcSuccess,funcDefaultError);
+
+      
+        });
        
        
 
